--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -342,7 +342,6 @@ main section article .pd-seleccionar {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        width: 40%;
         margin: 5px;
     }
 
@@ -392,9 +391,55 @@ main section article .pd-seleccionar {
         display: flex;
         align-items: flex-start;
     }
+    section div .pd-product-form .quantity{
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: baseline;
+        margin: 5px 0;
+    }
+    section div .pd-product-form .quantity .quantity-label {
+        margin: 0 30px 0 0;
+    }
+
+    section div .pd-product-form .quantity input[type="button"] {
+        padding: 0 5px;
+        min-width: 25px;
+        height: 25px;
+        border: 1px solid #c4c4c4;
+        background: transparent;
+        box-shadow: none;
+    }
+
+    section div .pd-product-form .quantity input[type="number"] {
+        width: 30px;
+        height: 25px;
+        border-radius: 0;
+        border: 1px solid #c4c4c4;
+        border-right: none;
+        border-left: none;
+        text-align: center;
+    }
+
+    section div .pd-product-form .quantity .minus {
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+        cursor: pointer;
+    }
+
+    section div .pd-product-form .quantity .plus {
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        cursor: pointer;
+    }
+
+    section div .pd-product-form .quantity h5 {
+        margin: 0 0 0 20px;
+    }
 
     .pd-product-area .pd-options {
-        align-content: left;
+        display: flex;
+        flex-direction: row-reverse;
     }
 
 
