--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,8 @@
             </ul>
             <ul class="rigth-navbar">
                 <li><a href="/login.html">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="/productDetail.html" class="tienda-botton">Tienda <i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="/productDetail.html" class="tienda-botton">Tienda </li>
+                <li> <a href="/producCart.html">   <i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav> 
         <div class="secondary-navbar">
