--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -106,6 +106,21 @@ a:hover{
     font-size: 17px;
 }
 
+
+/*POP UP*/
+.suscribe-section{
+    position: fixed;
+    background-color: #c4c4c4;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;    
+    padding: 5px;
+    transition-property: opacity;
+    transition-duration: 200ms;
+}
+/*FIN POP UP*/
+
 /*FOOTER*/
 .main-footer{
     background-color: #000;
@@ -121,15 +136,6 @@ a:hover{
     
 }
 
-.suscribe-section{
-    background-color: #c4c4c4;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    justify-content: space-between;
-
-    padding: 5px;
-}
 
 .suscribe-text{
     font-family: 'Montagu Slab', serif;
