--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -428,18 +428,26 @@ main section article .pd-seleccionar {
     }
     
 
-    section div .pd-product-form .quantity{
+    section div .pd-product-form .pd-quantity{
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
-        justify-content: baseline;
+        align-items: center;
+        justify-content: space-between;
         margin: 5px 0;
-    }
-    section div .pd-product-form .quantity .quantity-label {
-        margin: 0 30px 0 0;
+        width: 100%;
+        flex-wrap: nowrap;
     }
 
-    section div .pd-product-form .quantity input[type="button"] {
+    section div .pd-product-form .pd-quantity .pd-counter{
+        justify-content: center;
+        flex-wrap: nowrap;
+
+    }
+    section div .pd-product-form .pd-quantity .quantity-label {
+        align-items: start;;
+    }
+
+    section div .pd-product-form .pd-quantity input[type="button"] {
         padding: 0 5px;
         min-width: 25px;
         height: 25px;
@@ -448,7 +456,7 @@ main section article .pd-seleccionar {
         box-shadow: none;
     }
 
-    section div .pd-product-form .quantity input[type="number"] {
+    section div .pd-product-form .pd-quantity input[type="number"] {
         width: 30px;
         height: 25px;
         border-radius: 0;
@@ -458,20 +466,21 @@ main section article .pd-seleccionar {
         text-align: center;
     }
 
-    section div .pd-product-form .quantity .minus {
+    section div .pd-product-form .pd-quantity .minus {
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
         cursor: pointer;
     }
 
-    section div .pd-product-form .quantity .plus {
+    section div .pd-product-form .pd-quantity .plus {
         border-top-right-radius: 5px;
         border-bottom-right-radius: 5px;
         cursor: pointer;
     }
 
-    section div .pd-product-form .quantity h5 {
-        margin: 0 0 0 20px;
+    section div .pd-product-form .pd-quantity h5 {
+        width: 20%;
+        text-align: right;
     }
 
     .pd-product-area .pd-options {
@@ -521,145 +530,7 @@ main section article .pd-seleccionar {
         /*flex-wrap: wrap;*/
     }
 
-@media (min-width:760px){
 
-    .main-navbar{
-        flex-direction: row;
-        justify-content: space-between;
-        max-width: 800px;
-        margin: auto;
-    }
-
-    .logo{
-        width: 50px;
-        flex: 10%;
-    }
-
-    .main-navbar ul{
-        display: flex;
-        justify-content: space-between;
-        align-content: center;
-        justify-content: flex-end;
-        align-items: center;
-    }
-
-    .left-navbar{ /*pone los elementos de la lista en linea*/
-        display: flex;
-        width: 100%;
-        margin: 0 15px; 
-        flex-direction: row;
-        align-items: flex-start;
-    }
-    .rigth-navbar{ /*pone los elementos de la lista en linea*/
-       display: flex;
-       width: 100%;
-       margin: 0 15px; 
-       flex-direction: row;
-       align-items: flex-end;
-   }
-
-    .div-content-logoFooter{
-        flex: 30%;
-        padding: 10px 0;
-        text-align: center;
-        margin: 0 auto;
-    }
-    .footer-links{
-        flex: 30%;
-    }
-    .footer-social-media{
-        flex: 30%;
-        align-items: flex-end;
-    }
-
-    
-
-    .pc-product-cantidad, .pc-product{
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        /*flex-wrap: wrap;*/
-    }
-    
-     .pc-product-form {
-        display: flex;
-        flex-direction: column;
-        justify-content:left;
-    }
-    .pc-product-cantidad-combinada{
-        display: flex;
-        justify-content:space-between;
-        /*align-items: center;*/
-    }
-}
-
-@media (min-width:1200px){
-    .logo{
-        width: 140px;
-    }
-
-    .main-header-top-bar{
-        align-items: center;
-    }
-    .main-header-top-bar, .main-navbar{
-        max-width: 1400px;
-        margin: auto;
-    }
-    .text-header{
-        margin: 0;
-        max-width: none;
-        text-align: center;  
-    }
-    .main-navbar li{ /*pone espacios entre los elementos de las listas */
-        margin: 0 25px; 
-    }
-    .main-navbar a{
-        font-size: 16px;
-    }
-    /*FOOTER*/
-    div.footer-topbar{
-        max-width: 1400px;
-        margin: auto;
-    }
-    footer{
-        background-color:#000000;
-    }
-
-    /* Página Product Page*/
-
-    .pack-customized, .pd-product {
-        flex: 30%;
-        margin: 30px;
-    }
-
-    main .pd-tienda {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
-    main .pd-titulo {
-        margin: 20px;
-    }
-
-    .pc-product-cantidad, .pc-product{
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        /*flex-wrap: wrap;*/
-    }
-    
-     .pc-product-form {
-        display: flex;
-        flex-direction: column;
-        justify-content:left;
-    }
-    .pc-product-cantidad-combinada{
-        display: flex;
-        justify-content:space-between;
-        /*align-items: center;*/
-    }
-
-}
     /*INDEX MAIN SECTION*/
     /*index-top*/
     section.ind-top{
@@ -845,5 +716,145 @@ main section article .pd-seleccionar {
        cursor: pointer;
 
    }
+
+}
+
+@media (min-width:760px){
+
+    .main-navbar{
+        flex-direction: row;
+        justify-content: space-between;
+        max-width: 800px;
+        margin: auto;
+    }
+
+    .logo{
+        width: 50px;
+        flex: 10%;
+    }
+
+    .main-navbar ul{
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .left-navbar{ /*pone los elementos de la lista en linea*/
+        display: flex;
+        width: 100%;
+        margin: 0 15px; 
+        flex-direction: row;
+        align-items: flex-start;
+    }
+    .rigth-navbar{ /*pone los elementos de la lista en linea*/
+       display: flex;
+       width: 100%;
+       margin: 0 15px; 
+       flex-direction: row;
+       align-items: flex-end;
+   }
+
+    .div-content-logoFooter{
+        flex: 30%;
+        padding: 10px 0;
+        text-align: center;
+        margin: 0 auto;
+    }
+    .footer-links{
+        flex: 30%;
+    }
+    .footer-social-media{
+        flex: 30%;
+        align-items: flex-end;
+    }
+
+    
+
+    .pc-product-cantidad, .pc-product{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        /*flex-wrap: wrap;*/
+    }
+    
+     .pc-product-form {
+        display: flex;
+        flex-direction: column;
+        justify-content:left;
+    }
+    .pc-product-cantidad-combinada{
+        display: flex;
+        justify-content:space-between;
+        /*align-items: center;*/
+    }
+}
+
+@media (min-width:1200px){
+    .logo{
+        width: 140px;
+    }
+
+    .main-header-top-bar{
+        align-items: center;
+    }
+    .main-header-top-bar, .main-navbar{
+        max-width: 1400px;
+        margin: auto;
+    }
+    .text-header{
+        margin: 0;
+        max-width: none;
+        text-align: center;  
+    }
+    .main-navbar li{ /*pone espacios entre los elementos de las listas */
+        margin: 0 25px; 
+    }
+    .main-navbar a{
+        font-size: 16px;
+    }
+    /*FOOTER*/
+    div.footer-topbar{
+        max-width: 1400px;
+        margin: auto;
+    }
+    footer{
+        background-color:#000000;
+    }
+
+    /* Página Product Page*/
+
+    .pack-customized, .pd-product {
+        flex: 30%;
+        margin: 30px;
+    }
+
+    main .pd-tienda {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    main .pd-titulo {
+        margin: 20px;
+    }
+
+    .pc-product-cantidad, .pc-product{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        /*flex-wrap: wrap;*/
+    }
+    
+     .pc-product-form {
+        display: flex;
+        flex-direction: column;
+        justify-content:left;
+    }
+    .pc-product-cantidad-combinada{
+        display: flex;
+        justify-content:space-between;
+        /*align-items: center;*/
+    }
 
 }
