--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -71,44 +71,54 @@
                 </li>
             </ul>
 
+            <h4>Tu selección</h4>
             <div>
                 <form class="pd-product-form">
-                    <h4>Tu selección</h4>
-                    
-                        <div class="quantity">
-                            <label class="quantity-label" for="botella500"><input type="checkbox" id="botella500" value="botella500">Botella 500
-                                ml</label>
-                            <input type="button" value="-" class="minus">
+
+                    <div class="pd-quantity">
+                        <label class="quantity-label" for="botella500"><input type="checkbox" id="botella500"
+                                value="botella500">Botella 500 ml</label>
+                        <div class="pd-counter">
+                            <input type="button" id="decrease" value="-" class="minus">
                             <input type="number" class="product-quantity" step="1" min="1" max="17" name="quantity"
                                 value="0" title="Cantidad" size="4" placeholder="" inputmode="numeric">
-                            <input type="button" value="+" class="plus">
-                            <h5>$ 300</h5>
+                            <input type="button" id="increase" value="+" class="plus">
                         </div>
-                    
-                   
-                    <div class="quantity">
-                        <label class="quantity-label" for="botella1l"><input type="checkbox" id="botella1l" value="botella1l">Botella 1 lt</label>
-                        <input type="button" value="-" class="minus">
-                        <input type="number" class="product-quantity" step="1" min="1" max="17" name="quantity"
-                            value="1" title="Cantidad" size="4" placeholder="" inputmode="numeric">
-                        <input type="button" value="+" class="plus">
+                        <h5>$ 300</h5>
+                    </div>
+
+
+                    <div class="pd-quantity">
+                        <label class="quantity-label" for="botella1l"><input type="checkbox" id="botella1l"
+                                value="botella1l">Botella 1 lt</label>
+                        <div class="pd-counter">
+                            <input type="button" id="decrease" value="-" class="minus">
+                            <input type="number" class="product-quantity" step="1" min="1" max="17" name="quantity"
+                                value="1" title="Cantidad" size="4" placeholder="" inputmode="numeric">
+                            <input type="button" id="increase" value="+" class="plus">
+                        </div>
                         <h5>$ 600</h5>
                     </div>
-                    <div class="quantity">
-                        <label class="quantity-label" for="pack6500"><input type="checkbox" id="pack6500" value="pack6500">Pack x 6 - 500
-                            ml</label>
-                        <input type="button" value="-" class="minus">
-                        <input type="number" class="product-quantity" step="1" min="1" max="17" name="quantity"
-                            value="1" title="Cantidad" size="4" placeholder="" inputmode="numeric">
-                        <input type="button" value="+" class="plus">
+                    <div class="pd-quantity">
+                        <label class="quantity-label" for="pack6500"><input type="checkbox" id="pack6500"
+                                value="pack6500">Pack x 6 - 500 ml</label>
+                        <div class="pd-counter">
+                            <input type="button" id="decrease" value="-" class="minus">
+                            <input type="number" class="product-quantity" step="1" min="1" max="17" name="quantity"
+                                value="1" title="Cantidad" size="4" placeholder="" inputmode="numeric">
+                            <input type="button" id="increase" value="+" class="plus">
+                        </div>
                         <h5>$ 1700</h5>
                     </div>
-                    <div class="quantity">
-                        <label class="quantity-label" for="pack61l"><input type="checkbox" id="pack61l" value="pack61l">Pack x 6 - 1 lt</label>
-                        <input type="button" value="-" class="minus">
-                        <input type="number" class="product-quantity" step="1" min="1" max="17" name="quantity"
-                            value="1" title="Cantidad" size="4" placeholder="" inputmode="numeric">
-                        <input type="button" value="+" class="plus">
+                    <div class="pd-quantity">
+                        <label class="quantity-label" for="pack61l"><input type="checkbox" id="pack61l"
+                                value="pack61l">Pack x 6 - 1 lt</label>
+                        <div class="pd-counter">
+                            <input type="button" id="decrease" value="-" class="minus">
+                            <input type="number" class="product-quantity" step="1" min="1" max="17" name="quantity"
+                                value="1" title="Cantidad" size="4" placeholder="" inputmode="numeric">
+                            <input type="button" id="increase" value="+" class="plus">
+                        </div>
                         <h5>$ 3500</h5>
                     </div>
                 </form>
