--- a/views/index.html
+++ b/views/index.html
@@ -29,19 +29,8 @@
                 <li><a href="">Contactanos </a></li>
             </ul>
             <ul class="rigth-navbar">
-<<<<<<< HEAD
-<<<<<<< HEAD
-                <li><a href="/pitufo">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="/productDetail.html" class="tienda-botton">Tienda <i class="fas fa-shopping-cart"></i></a></li>
-=======
-                <li><a href="/login.html">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="/productDetail.html" class="tienda-botton">Tienda </li>
-                <li> <a href="/producCart.html">   <i class="fas fa-shopping-cart"></i></a></li>
->>>>>>> 3c82176f51b1d4b9cbf85946aaff959f6fe9de88
-=======
                 <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="/productDetail" class="tienda-botton">Tienda <i class="fas fa-shopping-cart"></i></a></li>
->>>>>>> 6046b1278e0f17319addcf077ba98a825c40f0f7
             </ul>
         </nav> 
         <div class="secondary-navbar">
@@ -59,54 +48,6 @@
             </div>           
         </div>
     </header>
-<<<<<<< HEAD
-    <section>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Dignissimos hic facere distinctio atque molestiae quod 
-             laudantium cupiditate recusandae provident veritatis 
-             tempora expedita nesciunt eaque necessitatibus, alias 
-             harum? Esse, blanditiis sint.
-        </div>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Dignissimos hic facere distinctio atque molestiae quod 
-             laudantium cupiditate recusandae provident veritatis 
-             tempora expedita nesciunt eaque necessitatibus, alias 
-             harum? Esse, blanditiis sint.
-        </div>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Dignissimos hic facere distinctio atque molestiae quod 
-             laudantium cupiditate recusandae provident veritatis 
-             tempora expedita nesciunt eaque necessitatibus, alias 
-             harum? Esse, blanditiis sint.
-        </div>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Dignissimos hic facere distinctio atque molestiae quod 
-             laudantium cupiditate recusandae provident veritatis 
-             tempora expedita nesciunt eaque necessitatibus, alias 
-             harum? Esse, blanditiis sint.
-        </div>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Dignissimos hic facere distinctio atque molestiae quod 
-             laudantium cupiditate recusandae provident veritatis 
-             tempora expedita nesciunt eaque necessitatibus, alias 
-             harum? Esse, blanditiis sint.
-        </div>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-             Dignissimos hic facere distinctio atque molestiae quod 
-             laudantium cupiditate recusandae provident veritatis 
-             tempora expedita nesciunt eaque necessitatibus, alias 
-             harum? Esse, blanditiis sint.
-        </div>
-    </section>
-    <div class="suscribe-section" id="suscribe-section">
-        <h5 class="suscribe-text" >Dejanos tu mail y recibí todas nuestras ofertas <i class="fa-solid fa-hands-clapping" ></i></h5>
-=======
     <section class="ind-top">
     <div class="reel-1">
         <img src="/images/beerJar.jpg" alt="">       
@@ -121,7 +62,6 @@
         <img src="/images/beerGlasses.jpg" alt="">       
     </div>
     </section>
-
     <section class="ind-middle">
      <div class="left-content">
     <div class="best">
@@ -155,34 +95,30 @@
             <img src="/images/beerGlasses2.jpg" alt="" > 
         </article>
     </section>
-
-
-
-
-
-    
     <section class="ind-bottom">
     <div class="mapa">
         <a href="/mapa-envios"></a>Zonas de influencia </a>
-        <p><i class="far fa-map"></i> <i class="fas fa-map-marker-alt"></i></p>
+        <i class="far fa-map"></i> <i class="fas fa-map-marker-alt"></i>
     </div>
     <div class="envios">
         <a href="/metodos-envios"></a>Métodos de Envios </a>
-        <p><i class="fas fa-motorcycle"></i></p>
+        <i class="fas fa-motorcycle"></i>
     </div>
     <div class="pagos">
         <a href="/metodos-pagos"></a>Formas de Pago </a> 
         <i class="fas fa-hand-holding-usd"></i>
     </div>
     </section>
+    <div class="testDiv">
+        
 
+    </div>
 
-    <div class="suscribe-section">
-        <h5 class="suscribe-text">Dejanos tu mail y recibí todas nuestras ofertas <i class="fa-solid fa-hands-clapping"></i></h5>
->>>>>>> 6046b1278e0f17319addcf077ba98a825c40f0f7
-        <div class="suscribe-bar">            
+    <div class="suscribe-section" id="suscribe-section">
+        <p class="suscribe-text">Dejanos tu mail y recibí todas nuestras ofertas <i class="fa-solid fa-hands-clapping"></i></p>
+        <div class="suscribe-bar" >            
             <input type="text" class="suscribe-input-text" placeholder="ingresa tu mail">                
-            <i class="fas fa-times" onclick="closeSection()"></i>
+            <i class="fas fa-times"  onclick="closeSection()"></i>
         </div> 
         
     </div>
