--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -110,24 +110,30 @@ a:hover{
 /*POP UP*/
 .suscribe-section{
     position: fixed;
+    bottom: 0px;
     background-color: #c4c4c4;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
     width: 100%;    
     padding: 5px;
     transition-property: opacity;
     transition-duration: 200ms;
+    z-index: 10;
 }
 /*FIN POP UP*/
 
 /*FOOTER*/
-.main-footer{
+.main-footer{    
     background-color: #000;
     display: flex;
+    width: 100%;
     flex-direction: column;
     align-content: center;
     justify-content: center;
+    z-index: 10;
+    padding-bottom: 40px;
 }
 
 .logofooter{
@@ -139,17 +145,20 @@ a:hover{
 
 .suscribe-text{
     font-family: 'Montagu Slab', serif;
-    flex: 100%;
+    flex: 20%;
 }
 
 .suscribe-input-text{
     flex:0.75;
-    max-width: 200px;
+    max-width: 300px;
+    height: 40px;
 }
 
 .suscribe-bar{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    width: 70%;
 }
 
 .footer-links {
