--- a/views/producCart.html
+++ b/views/producCart.html
@@ -25,8 +25,8 @@
                 <li><a href="">Contactanos </a></li>
             </ul>
             <ul class="rigth-navbar">
-                <li><a href="/login.html">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="/productDetail.html" class="tienda-botton">Tienda </a></li>
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/productDetail" class="tienda-botton">Tienda </a></li>
                 <li><a href="#" class="Tienda"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav>
