--- a/views/productPage.html
+++ b/views/productPage.html
@@ -21,12 +21,12 @@
             <ul class="left-navbar">
                 <li><a href="/">Home </a></li>
                 <li><a href="">Quienes somos </a></li>
-                <li><a href="/productPage.html">Nuestras Recetas </a></li>
+                <li><a href="/productPage">Nuestras Recetas </a></li>
                 <li><a href="">Contactanos </a></li>
             </ul>
             <ul class="rigth-navbar">
-                <li><a href="/login.html">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="/productDetail.html" class="tienda-botton">Tienda </a></li>
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/productDetail" class="tienda-botton">Tienda </a></li>
                 <li><a href="#" class="Tienda"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav>
