cambie el index a @ media 1200

--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
         }
     </script>
 </head>
-<body>
+<body class="ind-body">
     <header class="main-header">
         <nav class="main-navbar">
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
@@ -96,16 +96,16 @@
         </article>
     </section>
     <section class="ind-bottom">
-    <div class="mapa">
-        <a href="/mapa-envios"></a>Zonas de influencia </a>
-        <i class="far fa-map"></i> <i class="fas fa-map-marker-alt"></i>
+    <div class="ind-map-env-pag">
+        <a class="ind-bottom" href="/mapa-envios">Zonas de influencia </a>
+        <i class="fas fa-map-marker-alt"></i>
     </div>
-    <div class="envios">
-        <a href="/metodos-envios"></a>Métodos de Envios </a>
+    <div class="ind-map-env-pag">
+        <a class="ind-bottom" href="/metodos-envios">Métodos de Envios </a>
         <i class="fas fa-motorcycle"></i>
     </div>
-    <div class="pagos">
-        <a href="/metodos-pagos"></a>Formas de Pago </a> 
+    <div class="ind-map-env-pag">
+        <a class="ind-bottom" href="/metodos-pagos">Formas de Pago </a> 
         <i class="fas fa-hand-holding-usd"></i>
     </div>
     </section>
