index y styles de index, con vistas 360-760-1200

--- a/views/index.html
+++ b/views/index.html
@@ -64,9 +64,9 @@
     </section>
     <section class="ind-middle">
      <div class="left-content">
-    <div class="best">
+        <div class="best">
         <article class="art-1">
-            <img src="/Desing/Logo-Etiqueta-Originals/512x512original.png" alt="" > 
+            <img src="/Desing/Logo-Etiqueta-Originals/480x480original.png" alt="" > 
         </article>
         <h3> CONOCÉ NUESTROS PRODUCTOS DESTACADOS</h3>
             <h4>   Sus caracteristicas y proceso de producción.</h4>
@@ -77,24 +77,33 @@
         </button>
     </div>
     </div>
-
     <div class="right-content">
-        <article class="art-2">
-            <img src="/images/bottle.jpg" alt="">
-        </article>
+        
         <article class="art-3">
                 <h4>Cuando abrimos una cerveza, es seguramente porque  estamos disfrutando un momento de placer, solos o acompañados de familia, amigos, sonrisas y anécdotas para compartir. Compartiendo una picada, un asado o una buena comida,</h4>
                 <h4 class="bold"> abrir una buena cerveza de Calidad y hecha para todos los gustos, sin dudas marca la diferencia.</h4>
                  <h4>   Mientras disfrutamos, se pierde la nocion del tiempo y la sobremesa se extiende. </h4>
                <h3> Un aplauso para el anfitrion, y seguro hay un próximo encuentro </h3>
         </article>
+        
+    </div>
+</section>
+ <section class="bottom-content">
+
+ <div class="bottom-content">
+        <article class="art-2">
+            <img src="/images/bottle.jpg" alt="">
+        </article>
         <article class="art-4">
             <img src="/images/beerGlasses.jpg" alt="" > 
         </article>
         <article class="art-5">
-            <img src="/images/beerGlasses2.jpg" alt="" > 
+            <img src="/images/beerJar.jpg" alt="" > 
         </article>
-    </section>
+
+    </div>
+</section>   
+  
     <section class="ind-bottom">
     <div class="ind-map-env-pag">
         <a class="ind-bottom" href="/mapa-envios">Zonas de influencia </a>
