--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -284,12 +284,12 @@ main section article .pd-seleccionar {
 
 
 /*#########################################################################################/*/
-/*################################# MEDIA 361  ############################################/*/
+/*################## MEDIA 361  ############################################/*/
 /*#########################################################################################/*/
 
 @media (min-width: 361px) {
 
-  .main-header-top-bar {
+ .main-header-top-bar {
     display: flex;
     align-items: center;
     justify-content: start; /* SINO SPACE-BETWEEN que distribuye los elemntos de la barra de una manera homogenea*/
@@ -547,10 +547,226 @@ main section article .pd-seleccionar {
     flex-direction: column;
     /*flex-wrap: wrap;*/
   }
+
+    
+/*°°°°°°°°° INDEX °°°°°°°°°°°*/
+/*°°°°°°°°°°°°°°°°°°°°°°°°°°*/
+/*index-top*/
+section.ind-top {
+  display: flex;
+  flex-wrap: wrap; /*REVISAR ESTO DEL REEL*/
+  justify-content: space-evenly;
+  width: 100%;
+  margin-top: 5px;
+  border-bottom: 5px #949494 solid;
+  border-top: 2px #949494 solid;
+}
+
+div.reel-1,
+div.reel-2,
+div.reel-3,
+div.reel-4 {
+  display: flex;
+  justify-content: space-around;
+  margin: 10px 5px;
+  max-height: 200px;
+}
+  /*seccion Media*/
+  body.ind-body {
+    background-color: #eeede1a8;
+    font-family: "Montagu Slab", serif;
+    background-image: url("/Desing/Logo-Etiqueta-Originals/512x512original.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 40%;
+    position: relative;
+    background-blend-mode: lighten;
+  }
+  section.ind-bottom {
+    display: flex;
+  }
+  section.ind-middle {
+    margin: 10px 0;
+  }
+  div.left-content {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-height: 250px;
+    margin-left: auto;
+
+  }
+  div.best {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    width: 300px;
+    height: 250px;
+    border: #000 2px solid;
+    border-radius: 12px;
+    box-shadow: 0 0 10px #000;
+    text-align: center;
+    background-color: #ffda4d;
+  }
+  article.art-1 {
+    display: flex;
+    flex-direction: column;
+    border-bottom: black 1px solid;
+    margin: auto;
+    width: 33%;
+  }
+  div.best h3 {
+    padding: 0 5px;
+    font-size: 16px;
+    margin-top: 5px;
+  }
+  
+  div.best h4 {
+    padding: 0 5px;
+    font-size: 12px;
+    margin-top: 5px;
+  }
+  button.art-1 {
+    margin: 10px auto;
+    padding: 5px;
+    background-color: #ff6200;
+    color: #fff;
+    width: 75%;
+    text-align: center;
+    border-radius: 15px;
+    text-shadow: black 0 0 8px;
+    box-shadow: 0 0 8px #000;
+    cursor: pointer;
+  }
+  /*CONTENEDOR PADRE lado derecho*/
+  div.right-content {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 20px;
+    
+  }
+ /* texto del body lado derecho "cuando abrimos una..."*/
+  article.art-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 15px;
+    padding: 20px;
+    border: #949494 1px dotted;
+    border-radius: 52px;
+    box-shadow: 0 0 10px #000;
+    background-color: #ebebeb;
+    text-align: center;
+    width: 80%;
+    opacity: 90%;
+  }
+  article.art-3 h4 {
+    font-size: 12px;
+    padding-bottom: 2px;
+  }
+  
+  article.art-3 h4.bold {
+    margin: 5px 0;
+    font-style: italic;
+    font-weight: bold;
+    color: #ff6200;
+  }
+  article.art-3 h3 {
+    padding: 5px 0;
+    border-top: #ff8a00 1px double;
+    border-bottom: #ff8a00 1px double;
+    text-align: center;
+  }
+
+/* section middle-bootom*/
+section.bottom-content{
+  display: flex;
+  border-bottom: 5px #949494 solid;
+  margin: 40px 10px;
+  justify-content: center;
+}
+div.bottom-content{
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  justify-content: space-evenly;
+  width: 95%;
+
+}
+
+  article.art-2 {
+    display: flex;
+    margin: 15px auto;
+    border: #949494 1px solid;
+    box-shadow: 0 0 10px #000;
+    opacity: 90%;
+    height: auto;
+    position: relative;
+    left: 5%;
+  }
+  article.art-4 {
+    display: flex;
+    margin: auto 15px ;
+    border: #949494 1px solid;
+    box-shadow: 0 0 10px #000;
+    opacity: 90%;
+    height: auto;
+    position: relative;
+    left: 5%;
+  }
+  article.art-5 {
+    display: flex;
+    margin: 15px ;
+    border: #949494 1px solid;
+    box-shadow: 0 0 10px #000;
+    opacity: 90%;
+    height: auto;
+    position: relative;
+    
+  }
+  article.art-5 img{
+    text-align: center;
+    
+  }
+
+  /*botones de la seccion 3*/
+   .ind-map-env-pag {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 26%;
+    margin: auto;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #000;
+    padding: 5px 5px auto 15px;
+    font-size: 16px;
+    font-weight: bold;
+    text-shadow: black 0 0 10px;
+    height: 90px;
+    text-align: center;
+    background-color: #ff8a00;
+    color: #ffffff;
+    cursor: pointer;
+  }
+  
+  a.ind-bottom {
+    color: white;
+  }
+  .ind-map-env-pag:hover {
+    color: #541e00;
+    text-shadow: 10px 10px 20px rgb(255, 255, 255, 0.8);
+    transform: scale(98%);
+  }
+
+
 }
     
 /*#########################################################################################/*/
-/*################################# MEDIA 760  ############################################/*/
+/*############# MEDIA 760  ############################################/*/
 /*#########################################################################################/*/
 
 @media (min-width: 760px) {
@@ -628,9 +844,92 @@ main section article .pd-seleccionar {
     justify-content: space-between;
     /*align-items: center;*/
   }
+
+
+/*°°°°°°°°°°°INDEX°°°°°°°°°°°*/
+/*°°°°°°°°°°°°°°°°°°°°°°°°°°*/
+
+/*index-top*/
+
+body.ind-body {
+  background-size: 30%;
+}
+
+section.ind-middle,
+section.ind-bottom {
+  display: flex;
+  margin: 10px 0;
+}
+section.ind-bottom{
+  border-bottom: 5px #949494 solid;
+}
+
+div.left-content {
+  width: 300px;
+  max-height: 350px;
+  margin-left: 15px;
+}
+div.best {
+  height: 350px;
+  margin: 10px 20px 10px 10px;
+  border: #000 2px solid;
+  border-radius: 12px;
+  box-shadow: 0 0 10px #000;
+  text-align: center;
+  background-color: #ffda4d;
+}
+article.art-1 {
+  width: 45%;
+  position: relative;
+}
+ article.art-1 img{
+    width: 100%;
+    
+  }
+
+
+/*CONTENEDOR PADRE lado derecho*/
+div.right-content {
+  flex-direction: initial;
+  justify-content: space-evenly;
+  margin: 10px 20px;
+ 
+}
+
+/* texto del body lado derecho "cuando abrimos una..."*/
+article.art-3 {
+  order: -1;
+}
+
+div.bottom-content{
+  width: 90%;
+
+}
+
+article.art-2 {
+  margin: auto;
+ 
+}
+
+
+article.art-5 {
+  left: 5%;
+}
+
+/*botones de la seccion 3*/
+.ind-map-env-pag {
+  width: 15%;
+  border-radius: 28px;
+  padding: 15px 15px auto 15px;
+}
+  
+
+
+
+
 }
 /*#########################################################################################/*/
-/*################################# MEDIA 1200 ############################################/*/
+/*################ MEDIA 1200 ############################################/*/
 /*#########################################################################################/*/
 
 @media (min-width: 1200px) {
@@ -708,200 +1007,30 @@ main section article .pd-seleccionar {
     /*align-items: center;*/
   }
 
-                            /*°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°*/
-                            /*                /INDEX SECTION/                      */
-                            /*°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°°*/
+ /*°°°°°°°°°°°INDEX°°°°°°°°°°°*/
+/*°°°°°°°°°°°°°°°°°°°°°°°°°°*/
+
 /*index-top*/
-section.ind-top {
-    display: flex;
-    flex-wrap: wrap; /*REVISAR ESTO DEL REEL*/
-    justify-content: space-evenly;
-    width: 100%;
-    margin-top: 5px;
-    border-bottom: 5px #949494 solid;
-    border-top: 2px #949494 solid;
-  }
-  
-  div.reel-1,
-  div.reel-2,
-  div.reel-3,
-  div.reel-4 {
-    display: flex;
-    justify-content: space-around;
-    margin: 10px 5px;
-    max-height: 200px;
-  }
-  
-  /*seccion Media*/
-  body.ind-body {
-    background-color: #eeede1a8;
-    font-family: "Montagu Slab", serif;
-    background-image: url("/Desing/Logo-Etiqueta-Originals/512x512original.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 30%;
-    position: relative;
-    background-blend-mode: lighten;
-    
-  }
-  
-  section.ind-middle,
-  section.ind-bottom {
-    display: flex;
-    border-bottom: 5px #949494 solid;
-    margin: 10px 0;
-  }
+
   div.left-content {
     width: 200px;
-    max-height: 200px;
+    max-height: 300px;
     margin-left: 15px;
   }
   div.best {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
     width: 100%;
-    margin: 10px 20px 10px 10px;
-    border: #000 2px solid;
-    border-radius: 12px;
-    box-shadow: 0 0 10px #000;
-    text-align: center;
-    background-color: #ffda4d;
+    height: 350px;
+   
   }
   article.art-1 {
-    display: flex;
-    flex-direction: column;
-    border-bottom: black 1px solid;
-    margin: auto;
     width: 75%;
   }
-  div.best h3 {
-    padding: 0 5px;
-    font-size: 16px;
-    margin-top: 5px;
-  }
-  
-  div.best h4 {
-    padding: 0 5px;
-    font-size: 12px;
-    margin-top: 5px;
-  }
-  button.art-1 {
-    margin: 10px auto;
-    padding: 5px;
-    background-color: #ff6200;
-    color: #fff;
-    width: 75%;
-    text-align: center;
-    border-radius: 15px;
-    text-shadow: black 0 0 8px;
-    box-shadow: 0 0 8px #000;
-    cursor: pointer;
-  }
-  
-  /*CONTENEDOR PADRE lado derecho*/
-  div.right-content {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: initial;
-    justify-content: space-evenly;
-    margin: 10px 20px;
-    width: 970px; /*establece un panel de 970pxiles para armar el grid de fotos o contenido*/
-  }
-  
+ 
   article.art-2 {
-    display: flex;
-    margin: auto;
-    border: #949494 1px solid;
-    box-shadow: 0 0 10px #000;
-    opacity: 90%;
-    height: auto;
-    position: relative;
-    left: 5%;
-  }
-  /* texto del body lado derecho "cuando abrimos una..."*/
-  article.art-3 {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin: 15px;
-    padding: 20px;
-    border: #949494 1px dotted;
-    border-radius: 52px;
-    box-shadow: 0 0 10px #000;
-    background-color: #ebebeb;
-    text-align: center;
-    width: 80%;
-    order: -1;
-    opacity: 90%;
-  }
-  article.art-3 h4 {
-    font-size: 12px;
-    padding-bottom: 2px;
-  }
-  
-  article.art-3 h4.bold {
-    margin: 5px 0;
-    font-style: italic;
-    font-weight: bold;
-    color: #ff6200;
-  }
-  article.art-3 h3 {
-    padding: 5px 0;
-    border-top: #ff8a00 1px double;
-    border-bottom: #ff8a00 1px double;
-    text-align: center;
-  }
-  article.art-4 {
-    display: flex;
-    margin: auto;
-    border: #949494 1px solid;
-    box-shadow: 0 0 10px #000;
-    opacity: 90%;
-    height: auto;
-    position: relative;
-    left: 5%;
-  }
-  article.art-5 {
-    display: flex;
     margin: 10px;
-    border: #949494 1px solid;
-    box-shadow: 0 0 10px #000;
-    opacity: 90%;
-    height: auto;
-    position: relative;
-    left: 5%;
-  }
   
-  /*botones de la seccion 3*/
-  .ind-map-env-pag {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    width: 15%;
-    margin: auto;
-    margin-bottom: 10px;
-    border-radius: 28px;
-    box-shadow: 0 0 10px #000;
-    padding: 15px 15px auto 15px;
-    font-size: 16px;
-    font-weight: bold;
-    text-shadow: black 0 0 10px;
-    height: 90px;
-    text-align: center;
-    background-color: #ff8a00;
-    color: #ffffff;
-    cursor: pointer;
   }
-  
-  a.ind-bottom {
-    color: white;
-  }
-  .ind-map-env-pag:hover {
-    color: #541e00;
-    text-shadow: 10px 10px 20px rgb(255, 255, 255, 0.8);
-    transform: scale(98%);
-  }
+   
 }
 /*#########################################################################################/*/
 /*#########################################################################################/*/
