--- a/views/login.html
+++ b/views/login.html
@@ -52,16 +52,10 @@
                 <input type="text" placeholder="Contraseña">
                 <button type="submit">Ingresar</button>
             </form>
+            <h4>¿No tenes cuenta?</h4>
+            <a href="/register" class="lg-a">Registrate aca</a>
         </div>
     </section>
-    <div class="suscribe-section">
-        <h5 class="suscribe-text">Dejanos tu mail y recibí todas nuestras ofertas <i class="fa-solid fa-hands-clapping"></i></h5>
-        <div class="suscribe-bar">            
-            <input type="text" class="suscribe-input-text" placeholder="ingresa tu mail">                
-            <i class="fas fa-times"></i>
-        </div> 
-        
-    </div>
 <footer>
     <div class="main-footer">
         <div class="div-content-logoFooter">
