--- a/views/register.html
+++ b/views/register.html
@@ -42,17 +42,21 @@
             </div>           
         </div>
     </header>
-    <section>
-        
+    <section> 
+        <form action="POST" class="rg-form">
+            <input type="text" placeholder="Nombre" class="rg-input">
+            <input type="text" placeholder="Apellido" class="rg-input">
+            <input type="text" placeholder="Direccion" class="rg-input">
+            <input type="date" placeholder="Fecha de nacimiento" class="rg-input">
+            <input type="password" placeholder="Contraseña" class="rg-input">
+            <input type="password" placeholder="Contraseña" class="rg-input">
+            <div>
+                <input type="submit" name="" id="lg-submit">
+                <input type="reset">
+            </div>
+            
+        </form>       
     </section>
-    <div class="suscribe-section">
-        <h5 class="suscribe-text">Dejanos tu mail y recibí todas nuestras ofertas <i class="fa-solid fa-hands-clapping"></i></h5>
-        <div class="suscribe-bar">            
-            <input type="text" class="suscribe-input-text" placeholder="ingresa tu mail">                
-            <i class="fas fa-times"></i>
-        </div> 
-        
-    </div>
 <footer>
     <div class="main-footer">
         <div class="div-content-logoFooter">
