--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -27,7 +27,8 @@
             <ul class="rigth-navbar">
                 <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="/productDetail" class="tienda-botton">Tienda </a></li>
-                <li><a href="#" class="Tienda"><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="/producCart" class="Tienda"><i class="fas fa-shopping-cart"></i></a></li>
+
             </ul>
         </nav>
         <div class="secondary-navbar">
