--- a/views/login.html
+++ b/views/login.html
@@ -50,7 +50,7 @@
             <form action="" class="lg-form-login">
                 <input type="text" placeholder="Email">
                 <input type="text" placeholder="Contraseña">
-                <button type="submit">Ingresar</button>
+                <button type="submit" class="lg-submit">Ingresar</button>
             </form>
             <h4>¿No tenes cuenta?</h4>
             <a href="/register" class="lg-a">Registrate aca</a>
